support conan on windows

--- a/prj1/src/hash/meson.build
+++ b/prj1/src/hash/meson.build
@@ -5,10 +5,15 @@ hash_deps = [
     openssl_dep,
     gsl_microsoft_dep,
 ]
+hash_cpp_args = [ ]
+if compiler.get_id ( ) == 'msvc'
+    hash_cpp_args += '/wd4701'
+endif
 
 hash = static_library (
     'hash',
     'hash.cpp',
+    cpp_args : hash_cpp_args,
     dependencies : hash_deps,
     implicit_include_directories : false,
     include_directories : includeRoot,
