--- a/prj1/meson.build
+++ b/prj1/meson.build
@@ -9,3 +9,19 @@ project (
 	version : '0',
 )
 subdir ( 'src' )
+if build_machine.system ( ) != 'windows'
+	meson.add_install_script (
+		'tar',
+		'cJvf',
+		'bin.tar.xz',
+		'bin',
+	)
+else
+    meson.add_install_script (
+		'powershell.exe',
+		'Compress-Archive',
+		'-Force',
+		'bin',
+		'bin.zip'
+	)
+endif
