--- a/prj1/src/meson.build
+++ b/prj1/src/meson.build
@@ -15,4 +15,6 @@ main = executable (
     'main',
     'main.cpp',
     dependencies : hash_dep,
+    install : true,
+    install_rpath : '$ORIGIN',
 )
